fix spacing again

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,11 +208,3 @@
         min-width: unset;
     }
 }
-
-#main {
-    min-width: 90%;
-
-    @include media-query($on-palm) {
-        min-width: unset;
-    }
-}
